--- a/css/styles.css
+++ b/css/styles.css
@@ -102,3 +102,8 @@ width: 100%;
     justify-content: center;
     border-radius: 4px;
 }
+
+.dsmovie-form-container {
+    padding: 40px 0 ;
+    max-width: 480px;
+}
