--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@
     --text-gray: #4A4A4A;
     --color-primary: #4D41C0;
     --white: #fff;
-    --text-light-gray: #aaa;  
-    
+    --text-light-gray: #aaa;
+    --star-yellow: #FFBB3A;
 }
 
 * {
@@ -81,7 +81,7 @@ width: 100%;
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
-    min-height: 150px;
+    height: 220px;
 }
 
 .dsmovie-card-description h3 {
@@ -89,6 +89,30 @@ width: 100%;
     font-weight: 700;
     margin-bottom: 25px;
     text-align: center;
+}
+
+.dsmovie-card-descripiton-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.dsmovie-card-descripiton-bottom h4 {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+}
+
+.dsmovie-card-descripiton-bottom img {
+    width: 22px;
+}
+
+.dsmovie-card-descripiton-bottom p {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-light-gray);
+    margin-bottom: 10px;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover {
